# devstart

./: .devstart.yaml  .gitignore  .mm.yaml  Cargo.toml  README.md  install.ps1  install.sh  rustwrap.yaml
.github/workflows/: release.yml
devstart/: Cargo.toml
devstart/src/: alias.rs  clipboard.rs  exec.rs  lib.rs  main.rs  shortcuts.rs
devstart/src/tasks/: cargo.rs  local.rs  makefile.rs  mod.rs
devstart/tests/cmd/: cargo.trycmd  mix.trycmd  node-yarn.trycmd
devstart/tests/cmd/custom.in/: .makeme.yaml
devstart/tests/cmd/make.in/: Makefile
devstart/tests/cmd/mix.in/: Makefile
ds/: Cargo.toml
ds/src/: alias.rs  main.rs  table.rs
ds/src/tasks/: cargo.rs  local.rs  mod.rs  npm.rs
mm/: Cargo.toml
mm/src/: alias.rs  exec.rs  lib.rs  main.rs  prompt.rs  shortcuts.rs  table.rs
mm/src/tasks/: local.rs  mod.rs  npm.rs
mm/tests/cmd/: custom.trycmd  make.trycmd  node-pnpm.trycmd  node.trycmd  shortcuts.trycmd
mm/tests/cmd/custom.in/: Cargo.toml
mm/tests/cmd/shortcuts.in/: .makeme.yaml
xtask/: Cargo.toml
